# rate-limiting

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml
py-shot-limit/: Cargo.toml  README.md  pyproject.toml  test.py
py-shot-limit/src/: lib.rs  python.rs  python_tests.rs
py-shot-limit/tests/: bucket.py  fixed.py  gcra.py  sliding.py
rate-limiting-lib/: Cargo.toml
rate-limiting-lib/src/: lib.rs  token_bucket.rs
shot-limit/: Cargo.toml  README.md  test.py
shot-limit/benches/: strategy_bench.rs
shot-limit/src/: fixed_window.rs  gcra.rs  lib.rs  python.rs  sliding_window.rs  token_bucket.rs
tower-rate-limiting/: Cargo.toml
tower-rate-limiting/src/: buffered_layer.rs  layer.rs  lib.rs  managed_layer.rs  service.rs  tests.rs
tower-shot/: Cargo.toml  README.md
tower-shot/benches/: limiters.rs
tower-shot/examples/: axum_managed.rs  stress.rs
tower-shot/src/: buffered_layer.rs  error.rs  latency_layer.rs  layer.rs  lib.rs  managed_layer.rs  retrylimit_layer.rs  retrylimit_service.rs  service.rs  tests.rs  throughput_layer.rs  utils.rs
