[workspace]
resolver = "3"
members = [
    "py-shot-limit",
    "shot-limit",
    "tower-shot"
]

[workspace.package]
version = "0.1.1"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garypen/rate-limiting"
homepage = "https://github.com/garypen/rate-limiting"
documentation = "https://github.com/garypen/rate-limiting?tab=readme-ov-file"
edition = "2024"

[workspace.dependencies]
futures = "0.3.31"
tokio = { version = "1.49.0", features = [ "full", "test-util" ] }
tower = { version = "0.5.3", features = ["full"] }
tower-test = "0.4.0"
