[package]
name = "py-shot-limit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["rate", "limiting", "strategy"]
categories = ["concurrency", "algorithms"]
description = "python bindings for shot-limit library"

[lib]
name = "py_shot_limit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
shot-limit = { version = "0.1.0", path = "../shot-limit" }
