[package]
name = "shot-limit"
version.workspace = true
edition.workspace = true
description = "strategy driven rate limiting library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["rate", "limiting", "strategy"]
categories = ["concurrency", "algorithms"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures.workspace = true
more-asserts = "0.2.2"
tokio.workspace = true

[[bench]]
name = "strategy_bench"
harness = false
