[package]
name = "shot-limit"
version.workspace = true
edition.workspace = true
description = "strategy driven rate limiting library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["rate", "limiting", "strategy"]
categories = ["concurrency", "algorithms"]

[lib]
name = "shot_limit"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
quanta = "0.12.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures.workspace = true
governor = "0.10.4"
more-asserts = "0.2.2"
tokio.workspace = true

[[bench]]
name = "strategy_bench"
harness = false
