[package]
name = "shot-limit"
version.workspace = true
edition.workspace = true
description = "strategy driven rate limiting library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["rate", "limiting", "strategy"]
categories = ["concurrency", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quanta = "0.12.6"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
futures.workspace = true
governor = "0.10.4"
more-asserts = "0.3.0"
tokio.workspace = true

[[bench]]
name = "strategy_bench"
harness = false
