[package]
name = "tower-rate-limiting"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
rate-limiting-lib = { version = "0.1.0", path = "../rate-limiting-lib" }
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
futures.workspace = true
tokio = { version = "1.48.0", features = [ "test-util" ] }
