[package]
name = "tower-shot"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = []
# Enable this feature for Axum IntoResponse support
axum = ["dep:axum", "dep:http"]

[dependencies]
hdrhistogram = "7.5.4"
shot-limit = { version = "0.1.0", path = "../shot-limit" }
thiserror = "2.0.17"
tokio.workspace = true
tower.workspace = true

# Optional dependencies triggered by the "axum" feature
axum = { version = "0.8.8", optional = true }
http = { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures.workspace = true
tokio = { version = "1.48.0", features = [ "test-util" ] }

[[bench]]
name = "limiters"
harness = false

[[example]]
name = "axum_managed"
required-features = ["axum"]
