[package]
name = "tower-shot"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
categories = ["concurrency", "algorithms"]
description = "A high-performance, atomic-backed rate limiting middleware for `tower`"

[features]
default = []
# Enable this feature for Axum IntoResponse support
axum = ["dep:axum", "dep:http"]

[dependencies]
hdrhistogram = "7.5.4"
rand = "0.9"
shot-limit = { version = "0.1.0", path = "../shot-limit" }
thiserror = "2.0.17"
tokio.workspace = true
tower.workspace = true
pin-project-lite = "0.2.16"

# Optional dependencies triggered by the "axum" feature
axum = { version = "0.8.8", optional = true }
http = { version = "1.4.0", optional = true }
opentelemetry = "0.31.0"

[dev-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
futures.workspace = true
governor = "0.10.4"
http = "1.4.0"
humantime = "2.3.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tokio = { version = "1.48.0", features = [ "test-util" ] }
tower_governor = "0.8.0"

[[bench]]
name = "limiters"
harness = false

[[example]]
name = "axum_managed"
required-features = ["axum"]
